--- a/.github/workflows/hello-world-example.yml
+++ b/.github/workflows/hello-world-example.yml
@@ -26,7 +26,7 @@ jobs:
       -
 
         name: Event
-        run: echo "Triggered by: $GITHUB_EVENT-NAME"
+        run: echo "Triggered by: $GITHUB_EVENT_NAME"
 
       -
 
