Прокинул github context  в переменную окружения

--- a/.github/workflows/hello-world-example.yml
+++ b/.github/workflows/hello-world-example.yml
@@ -13,6 +13,8 @@ jobs:
           echo "Step 2..."
           echo "Step 3..."
       - name: Event
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
         run: echo "Triggered by $GITHUB_CONTEXT"
       - name: Say Goodbye
         run: echo "Goodbye!"
